# Numerical_Linear_Algebra

./: CMakeLists.txt  main.c
include/: lab1.h  macro.h  matrix.h  matrix_test.h  vector.h
src/: CMakeLists.txt  lab1.c  matrix.c  vector.c
test/: CMakeLists.txt  matrix_multiply_test.c  matrix_test.c
